# resumee

./: .easignore  .env  .env.example  .gitignore  .replit  APP_FLOW_DIAGRAM.md  ATS_OPTIMIZATION_GUIDE.txt  App.tsx  DOWNLOAD_FIX_SUMMARY.md  FIX_IN_3_STEPS.md  FORMATTING_REQUIREMENTS.md  GEMINI.md  GIT_PUSH_INSTRUCTIONS.md  GOOGLE_OAUTH_SETUP.md  GUEST_USER_REMOVAL_SUMMARY.md  HARVARD_CV_FORMAT.md  HARVARD_CV_REQUIREMENTS.md  ISSUE_DIAGNOSIS.md  NAME_UNDERLINE_UPDATE.md  OCR_FIX_NOTES.md  PDF_FORMATTER_GUIDE.md  PROCESSING_SUCCESS_SUMMARY.md  PROCESSING_TIMEOUT_FIX.md  PROFESSIONAL_FILENAME_UPDATE.md  PROGRESS_TRACKING.md  QUICK_FIX.md  README.md  RESTART_BACKEND.md  SOLUTION_SUMMARY.md  START_BACKEND.md  TEMPLATE_PREVIEW_FEATURE.md  TEMPLATE_SPEC_IMPLEMENTATION.md  TEMPLATE_SYSTEM_ARCHITECTURE.md  TEMPLATE_SYSTEM_IMPLEMENTATION.md  TEMPLATE_UI_UPDATE.md  TROUBLESHOOTING_STUCK_PROCESSING.md  USER_GUIDE.md  app.json  code-backup.bundle  design_guidelines.md  (+13 more)
attached_assets/: Pasted-ou-are-an-expert-backend-engineer-Implement-a-Stripe-Checkout-credits-flow-for-a-FastAPI-Python-bac-1764101169213_1764101169214.txt
backend/: .env  Dockerfile  db.py  main.py  payments_server.py  requirements.txt  stripe_utils.py
components/: AnimatedButton.tsx  Button.tsx  Card.tsx  GoogleSignInButton.tsx  PaywallModal.tsx  RatingModal.tsx  ThemedText.tsx
constants/: theme.ts
contexts/: CreditsContext.tsx  ResumeContext.tsx  RevenueCatContext.tsx  UserContext.tsx
hooks/: useTheme.ts
navigation/: HistoryStackNavigator.tsx  HomeStackNavigator.tsx  MainTabNavigator.tsx  (+1 more)
(+34 files in other folders)
